hphp/test/quick/protected-magic-getter2.php.expectf
string(4) "blah"

Fatal error: Cannot access protected property in %s/test/quick/protected-magic-getter2.php on line 11
